<resources>
    <string name="app_name">超定额</string>
    <string name="activity_createselforder">自开单</string>
    <string name="activity_createselforderhistory">自开单记录</string>
    <string name="activity_query_bill">账户查询</string>
    <string name="activity_query_bill_result">账户查询结果</string>
    <string name="activity_knowledgebase">服务指南</string>
    <string name="activity_createselforderdetail">自开单详情</string>
    <string name="activity_user_detail_information">用户详细信息</string>
    <string name="activity_jinqi_cm">近期抄码</string>
    <string name="activity_recent_bill_information_detail">近期开账详情</string>
    <string name="activity_arrears_information_detail">欠费信息详情</string>
    <string name="activity_picture_details">照片详情</string>
    <string name="menu_sync">同步</string>
    <string name="menu_upload">上传</string>
    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="radio_button_details">详细</string>
    <string name="menu_deal">处理</string>
    <string name="menu_save">保存</string>
    <string name="menu_save_commit">保存上传</string>
    <string name="menu_commit">提交</string>
    <string name="menu_category">分类</string>
    <string name="menu_filter">筛选</string>
    <string name="menu_category_all">不限</string>
    <string name="menu_category_plan_stop_water">计划停水</string>
    <string name="menu_category_take_water">接水</string>
    <string name="menu_category_maintain">维修</string>
    <string name="menu_category_repair">抢修</string>
    <string name="menu_category_burst_pipe">爆管</string>
    <string name="menu_category_self_check">自检</string>
    <string name="menu_category_other">其他</string>
    <string name="menu_calendar">日期</string>
    <string name="notice_is_search_http">实时查询:</string>
    <string name="radio_button_receipt">单据</string>
    <string name="radio_button_edit">编辑</string>
    <string name="radio_button_media">多媒体</string>
    <string name="radio_button_basic_information">基本信息</string>
    <string name="radio_button_service_point_information">服务点</string>
    <string name="radio_button_recent_bill_information">近期开账</string>
    <string name="radio_button_arrears_information">欠费信息</string>
    <string name="radio_button_huanbiao_information">换表信息</string>
    <string name="radio_button_process">流程</string>
    <string name="label_my_order">未处理工单</string>
    <string name="text_guest_number">客服编号:</string>
    <string name="text_task_number">任务编号:</string>
    <string name="text_shoulizhandian">受理站点:</string>
    <string name="text_happened_time">发生时间:</string>
    <string name="text_reason">原因:</string>
    <string name="text_time">时间:</string>
    <string name="stop_water_text_time">停水时间:</string>
    <string name="text_address">地址:</string>
    <string name="text_videos_full">视频已满</string>
    <string name="text_chulishixian">处理时限:</string>
    <string name="text_shenpi_beizhu">审批备注:</string>
    <string name="text_dispatch_time">派单时间:</string>
    <string name="text_receive">接收</string>
    <string name="text_dispatch">派单</string>
    <string name="label_has_uploaded">已上传</string>
    <string name="label_no_upload">未上传</string>
    <string name="label_handle_order">工单处理</string>
    <string name="label_delay">延期</string>
    <string name="label_charge_back">退单</string>
    <string name="label_handle">处理</string>
    <string name="label_finish">完成</string>
    <string name="label_delay_or_back">退单、延期</string>
    <string name="label_no_received">未接收</string>
    <string name="label_finish_failed">销单不合格</string>
    <string name="text_handle_time">处理时间:</string>
    <string name="text_arrive_time">到场时间:</string>
    <string name="text_choose_handle_time">请选择处理时间</string>
    <string name="text_choose_arrive_time">请选择到场时间</string>
    <string name="state_wait_receive">待接收</string>
    <string name="state_already_receive">已接收</string>
    <string name="state_already_cancel">已取消</string>
    <string name="state_delay">延期审核中</string>
    <string name="state_delay_fail">延期审核失败</string>
    <string name="state_refund">退单审核中</string>
    <string name="state_other">异常工单</string>
    <string name="state_refund_fail">退单审核失败</string>
    <string name="state_already_finish">已完成</string>
    <string name="state_xiaodan_fail">销单失败</string>
    <string name="state_xiaodan_finish">已销单</string>
    <string name="state_zuoye_zhong">作业中</string>
    <string name="state_anyonghu_daiding">按用户待定</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="title_picture_xchj">现场环境照片</string>
    <string name="title_picture_bp">表盘照片</string>
    <string name="label_photo">照片</string>
    <string name="label_voice">录音</string>
    <string name="label_signup">签名</string>
    <string name="text_pictures_full">照片已满</string>
    <string name="text_record_full">录音已满</string>
    <string name="text_request">询问</string>
    <string name="text_is_delete_record">您是否确认删除录音</string>
    <string name="text_is_delete_photo">您是否确认删除照片</string>
    <string name="text_is_delete_signup">您是否确认删除电子签名</string>
    <string name="text_delete_success">删除成功</string>
    <string name="text_delete_failure">删除失败</string>
    <string name="text_save_fail">保存失败</string>
    <string name="text_save_success">保存成功</string>
    <string name="text_negative">取消</string>
    <string name="text_positive">确定</string>
    <string name="text_take_media">是否拍照或录音？</string>
    <string name="text_save_update">是否保存上传？</string>
    <string name="dialog_btn_take_media">拍照录音</string>
    <string name="dialog_btn_save">保存上传</string>
    <string name="pop_take_photo">拍照</string>
    <string name="pop_pick_photo">从相册中选取</string>
    <string name="text_multimedia_take_video">录像</string>
    <string name="label_history_orders">已处理工单</string>
    <string name="title_task_save">待处理工单</string>
    <string name="title_task_upload">已处理工单</string>
    <string name="label_nonresident_overrate">非居超定额</string>
    <string name="label_overrate_selfbilling">超定额自开单</string>
    <string name="label_call_selfbilling">催缴自开单</string>
    <string name="label_selfbilling_editsubmit">自开单编辑提交</string>
    <string name="label_selfbilling_queryselect">自开单查询选择</string>
    <string name="label_overrate_receipt">超定额发单</string>
    <string name="label_overrate_call">超定额催缴</string>
    <string name="label_receipt_detail">发单详情</string>
    <string name="label_call_detail">催缴详情</string>
    <string name="label_call_bill_detail">催缴账单详情</string>
    <string name="label_signup_name">签名</string>
    <string name="radio_button_paidanlx">派单类型</string>
    <string name="radio_button_picih">批次号</string>
    <string name="radio_button_gongdans">工单数</string>
    <string name="radio_button_yiwancs">已完成数</string>
    <string name="radio_button_weiwancs">未完成数</string>
    <string name="radio_button_nian">年</string>
    <string name="radio_button_jidu">季度</string>
    <string name="radio_button_chaodingesl">超定额水量</string>
    <string name="radio_button_kaizhangje">开账金额</string>
    <string name="radio_button_kaizhangsl">开账水量</string>
    <string name="text_xiaogenhao">销根号:</string>
    <string name="text_zhanghuBH">账户编号:</string>
    <string name="text_huming">户名:</string>
    <string name="text_fanyingren">反映人:</string>
    <string name="text_fashengdizhi">发生地址:</string>
    <string name="text_lianxidianhua">联系电话:</string>
    <string name="text_mobile">手机:</string>
    <string name="text_fanyingleixing">反映类型:</string>
    <string name="text_fanyingneirong">反映内容:</string>
    <string name="text_fanyingquming">反映区名:</string>
    <string name="text_fanyinglaiyuan">反映来源:</string>
    <string name="text_chulijibie">处理级别:</string>
    <string name="label_history_orders_count">记录数: </string>
    <string name="text_handle_type">处理类别:</string>
    <string name="text_handle_content">处理内容:</string>
    <string name="text_happened_reason">发生原因:</string>
    <string name="text_handle_measure">解决措施:</string>
    <string name="text_handle_mark">处理备注:</string>
    <string name="text_handle_result">处理结果:</string>
    <string name="text_fuhe_chaoma">复核抄码:</string>
    <string name="text_chaobiao_zt">抄表状态:</string>
    <string name="text_result">结果:</string>
    <string name="text_finish_task">完成销单</string>
    <string name="label_query_orders">工单查询</string>
    <string name="label_query_result_details">查询详情</string>
    <string name="text_search">搜索</string>
    <string name="text_history_search">历史搜索</string>
    <string name="text_clear_history">清空历史搜索</string>
    <string name="label_query_orders_result">工单列表</string>
    <string name="text_state">状态:</string>
    <string name="text_hint_task_number">请输入任务编号</string>
    <string name="text_hint_lianxidianhua">请输入联系电话</string>
    <string name="text_query_result_details">查询结果详情</string>
    <string name="text_delay_reason">延期原因:</string>
    <string name="text_back_reason">退单原因:</string>
    <string name="text_delay_time">延期时间:</string>
    <string name="text_relay_time">回复时间:</string>
    <string name="label_no_water_supply">停水公告</string>
    <string name="label_notice_details">公告详情</string>
    <string name="text_notice_type">公告类型:</string>
    <string name="text_notice_date_time">发布时间:</string>
    <string name="text_publish_person">发布人:</string>
    <string name="text_publish_danwei">发布单位:</string>
    <string name="text_no_water_time">停水时间:</string>
    <string name="text_notice_fanwei">公告范围:</string>
    <string name="text_notice_content">公告内容:</string>
    <string name="text_content">内容:</string>
    <string name="stop_water_text_area">停水范围:</string>
    <string name="text_shoulibeizhu">受理备注:</string>
    <string name="text_xianchangchuli">现场处理:</string>
    <string name="text_notice_hint_title">请输入标题</string>
    <string name="text_notice_hint_content">请输入内容</string>
    <string name="text_dizhi">地址:</string>
    <string name="text_nonghao">弄号:</string>
    <string name="text_luming">路名:</string>
    <string name="text_biaokahao">表号:</string>
    <string name="text_chaobiaoyuan">抄表员:</string>
    <string name="text_xgh">销根号：</string>
    <string name="text_zhbh">账户编号：</string>
    <string name="text_kehumingcheng">客户名称：</string>
    <string name="text_kehulxdm">涉水代码：</string>
    <string name="text_kehulxmc">涉水代码描述：</string>
    <string name="text_kehuxydj">客户信用等级：</string>
    <string name="text_kehufxdj">客户风险等级：</string>
    <string name="text_kehuxyfz">客户信用分值：</string>
    <string name="text_yzsj">业主手机：</string>
    <string name="text_dz">地址：</string>
    <string name="text_lm">路名：</string>
    <string name="text_xq">小区：</string>
    <string name="text_nm">弄名：</string>
    <string name="text_hint_zhanghuBH">请输入账户编号</string>
    <string name="text_hint_dizhi">请输入地址</string>
    <string name="text_hint_nonghao">请输入弄号</string>
    <string name="text_hint_luming">请输入路名</string>
    <string name="text_query">查询</string>
    <string name="text_start_date">开始日期：</string>
    <string name="text_end_date">结束日期：</string>
    <string name="text_notice_dialog_title">标题:</string>
    <string name="text_notice_dialog_content">内容:</string>
    <string name="text_notice_dialog_type">类别:</string>
    <string name="toast_choose_date">日期必选</string>
    <string name="menu_all_tasks">全部工单</string>
    <string name="menu_upload_tasks">未上传工单</string>
    <string name="menu_expired_tasks">超期工单</string>
    <string name="menu_noexpired_tasks">未超期工单</string>
    <string name="menu_deadline_tasks">临期工单</string>
    <string name="menu_fylx_tasks">反应类型</string>
    <string name="menu_address_sort">地址排序</string>
    <string name="menu_address_sort_asc">地址正序排序</string>
    <string name="menu_address_sort_desc">地址倒序排序</string>
    <string name="menu_receive_time_asc">接报时间升序</string>
    <string name="menu_receive_time_desc">接报时间降序</string>
    <string name="dialog_start_record">开始</string>
    <string name="dialog_stop_record">结束</string>
    <string name="dialog_record_count">请点击开始按钮</string>
</resources>