<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_address_sort"
        android:orderInCategory="104"
        android:icon="@mipmap/ic_default_sort"
        android:title="@string/menu_address_sort"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_all_tasks"
        android:orderInCategory="100"
        android:title="@string/menu_all_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deadline_tasks"
        android:orderInCategory="101"
        android:title="@string/menu_deadline_tasks"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_expired_task"
        android:orderInCategory="102"
        android:title="@string/menu_expired_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fylx_tasks"
        android:orderInCategory="103"
        android:title="@string/menu_fylx_tasks"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_address_sort_asc"
        android:orderInCategory="105"
        android:title="@string/menu_address_sort_asc"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_address_sort_desc"
        android:orderInCategory="106"
        android:title="@string/menu_address_sort_desc"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_receive_time_asc"
        android:orderInCategory="107"
        android:title="@string/menu_receive_time_asc"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_receive_time_desc"
        android:orderInCategory="108"
        android:title="@string/menu_receive_time_desc"
        android:visible="false"
        app:showAsAction="never"/>

</menu>
