<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:minEms="4"
                    android:text="@string/text_zhanghuBH"
                    android:textSize="@dimen/textsize_16"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_zhanghuBH"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_weight="1"
                    android:hint="@string/text_hint_zhanghuBH"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:text="@string/text_nonghao"
                    android:textSize="@dimen/textsize_16"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_nonghao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_weight="1"
                    android:hint="@string/text_hint_nonghao"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:text="@string/text_luming"
                    android:textSize="@dimen/textsize_16"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_luming"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_weight="1"
                    android:hint="@string/text_hint_luming"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:text="@string/text_dizhi"
                    android:textSize="@dimen/textsize_16"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_dizhi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_weight="1"
                    android:hint="@string/text_hint_dizhi"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_0176da"
        android:text="@string/text_query"
        android:textColor="@color/color_white_ffffff" />
</LinearLayout>
