<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <!--标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/text_notice_dialog_title"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_notice_title"
                android:layout_width="@dimen/width_200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:hint="@string/text_notice_hint_title"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <!--内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/text_notice_dialog_content"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_notice_content"
                android:layout_width="@dimen/width_200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:hint="@string/text_notice_hint_content"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <!--类别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/text_notice_dialog_type"
                android:textSize="@dimen/textsize_16" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_notice_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"></android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>


        <!--开始日期-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/text_start_date"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_dialog_notice_start_date"
                android:layout_width="@dimen/width_120"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/toast_choose_date"
                android:textSize="@dimen/textsize_16" />

            <ImageView
                android:id="@+id/iv_dialog_notice_start_date_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_calendar_32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="*"
                android:textColor="@color/color_red_ff0000" />

        </LinearLayout>

        <!--结束日期-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/text_end_date"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_dialog_notice_end_date"
                android:layout_width="@dimen/width_120"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/toast_choose_date"
                android:textSize="@dimen/textsize_16" />

            <ImageView
                android:id="@+id/iv_dialog_notice_end_date_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_calendar_32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="*"
                android:textColor="@color/color_red_ff0000" />
        </LinearLayout>

        <!--是否实时查询-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:text="@string/notice_is_search_http"
                android:textSize="@dimen/textsize_16" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_is_from_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>