<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/handle_order_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_0176da"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <!--切换Fragment-->
    <FrameLayout
        android:id="@+id/delay_order_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_white_ffffff">

    </FrameLayout>

    <!--bottom-->
    <LinearLayout
        android:id="@+id/handle_order_bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray_bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_divider"></View>

        <RadioGroup
            android:id="@+id/delay_order_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/delay_order_details_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/radio_button_details_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_button_details"
                android:textColor="@color/radio_button_text_selecter"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/delay_order_handle_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radio_button_handle_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:text="@string/label_handle"
                android:textColor="@color/radio_button_text_selecter"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/delay_order_multimedia_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radio_button_media_new_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_button_media"
                android:textColor="@color/radio_button_text_selecter"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/delay_order_process_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radio_button_process_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_button_process"
                android:textColor="@color/radio_button_text_selecter"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
